--- a/includes/core.tex
+++ b/includes/core.tex
@@ -180,7 +180,7 @@ projekt bol písaný v~programovacom jazyku C++ tak sa aj tieto zmeny budu týka
 	aj tejto oblasti kódu. V~druhej verzii ROS-u si vieme zadefinovať typ vykonávania programu separátne pre každý uzol a vieme si tento typ
 	zadefinovať aj sami~\cite{ROS2design}.
 
-\section{Robot}
+\section{Robot a jeho ovladanie}
 
 Robot, s~ktorým sme pracovali bol výsledkom tímového projektu viacerých študentov \newline z~roku 2019. Pri~vysvetľovaní a~opisovaní robota sa budeme
 odvolávať na dokumenty, stránky a~kód, ktorý napísali. Všetky tieto údaje si sprístupnené na~mobilnom robote v~záložke
@@ -333,91 +333,6 @@ na~preddefinované miesto. \newline
 \indent Nastavovanie rýchlosti pravého a~ľavého kolesa nie sú povinne parametre. Musíme ich zadávať len v~prípade posielania rýchlostí
 cez~príkaz s~číslom \ref{c3}.
 
-\section{Správanie programu}
-\label{sec:program}
-
-\begin{figure}[!htbp]
-	\begin{center}
-		\includegraphics[width=0.9\textwidth]{img/BlackMetal_flowchart.png}
-	\end{center}
-	\caption{Graf vykonávania programu na ovládanie robota pomocou ROS2.}
-	\label{fig:flowchart}
-\end{figure}
-
-\subsection{Uvod do citania grafu}
-\label{sec:citanie_grafu}
-
-Na obrazku Obr.~\ref{fig:flowchart} mozeme vidiet viacero objektov roznych farieb. Objekty zobrazene cervenou farbou su uzly spracovavane
-a vytvarane v ramci ROS2. Kazdy tento objekt bezi v separatnom procese. Objekty zobrazene oraznovou farbou su objekty, ktore maju svoje
-vlastne vlakno. Tieto objekty boli vytvorene uzlom BlackMetal. Datove struktury Queue, zobrazene bielou farbou su vytvorene  tak aby
-zabezpecovali bezchybnu komunikaciu medzi viacerimi vlaknami. Objekt so zelenou farbou je vstup do programu. Je zadavany uzivatelom
-a reprezentuje ziadanu rychlost robota. Modry objekt je vystupom probtramu. Je to topic, na ktory sa publikuje aktualna pozicia robota.
-Robot samotny je zobrazeny bielou farbou vo fome maleho oblacika. Prerusovane ciary na diagrame znazornuju sietovu komunikaciu programu
-a robota. Cervene dvojite ciary udavaju presne ktore objekty patria ROS-u. Nakoniec cierne plne ciary reprezentuju tok dat medzi objektami.
-
-\subsection{Uzly}
-
-Na obrazku Obr.~\ref{fig:flowchart} mozeme vidiet postup vykonavania programu na ovaldanie robota BlackMetal pomocou ROS2.
-Na zaciatku programu sa vytvoria 3 uzly. Prvy uzol \textbf{Position Publisher Node} je uzol, na ktory sa publikuje vypocitana pozicia robota.
-Pocita sa na zakalde obdrzanych dat z enkoderov robota. Uzol \textbf{Logger Node} sluzi na zaznamenavanie stavu robota \ref{sec:logovanie}.
-Posledny uzol \textbf{BlackMetal Node} ovlada robota na zaklade zadanych dat uzivatelom.
-
-\subsection{Vstup}
-
-Uzol \textit{BlackMetal Node} vytvorí príjemcu, ktorý počúva na téme \textit{geometry\_msgs/msg/Twist}. Tento vstup je vo forme príkazu
-zadaného v príkazovom riadku. Vyzera nasledovne:
-
-\lstset{language=bash,
-	basicstyle=\ttfamily,
-	keywordstyle=\color{blue}\ttfamily,
-	stringstyle=\color{orange}\ttfamily,
-	commentstyle=\color{green}\ttfamily,
-	morecomment=[l][\color{magenta}]{\#},
-	numberstyle=\color{red}
-}
-
-\label{requestCommand}
-\begin{lstlisting}[language=bash]
-	ros2 topic pub /cmd_vel geometry_msgs/msg/Twist
-		"linear:
-			x: 0.0,
-			y: 0.0,
-			z: 0.0,
-		angular:
-			x: 0.0,
-			y: 0.0,
-			z: 0.0" -1
-\end{lstlisting}
-
-Tento \hyperref[requestCommand]{príkaz} publikuje jednu správu (\textit{-1}) o lineárnych a uhlových rýchlostiach na tému \textit{/cmd\_vel}
-Táto sprava je typu \textit{geometry\_msgs/mgs/Twist}. Je nasledne spracovana a ulozena do rady \textit{Queue}. Tato rada je prioritne zalozena.
-To znamena, ze poziadavka s nizsim kodom ma vyzsiu prioritu. Poziadavky a ich kody mozeme vidiet v sekcii \ref{sec:ovladanie}.
-
-\subsection{Komunikacia s robotom}
-\label{sec:robotComms}
-
-Ako je naznacene na Obr.~\ref{fig:flowchart}, klient si vo svojom vlastnom vlakne vytiahne prvu spravu z rady a pretransformuje ju do formy JSON.
-Tento typ spravy mozeme vidiet v \ref{sec:ovladanie}. Prikaz je poslany robotu a ten obratom da vediet, ci danu poziadavku obdrzal. Ak tato sprava
-ziadala rychlosti kolies, tak robot dalsou spravou odpovie na danu poziadavku. Typ tejto odpovede mozeme vidiet v \ref{jsonWannabeSpeed}. V tomto pripade
-sa sprava spracuje a ulozi sa do dalsej rady.
-
-\subsection{Odometria}
-\label{sec:odometria}
-
-Odometria, pocitanie polohy na zaklade rychlosti kolies, sa vykonava rovkako ako komunikacia s robotom v separatnom vlakne. Tu je potreba si uvedomit
-jednu skutocnost. To je ta, ze ked posielame ziadost na nastavenie rychlosti kolies robota, tak robot si hodnoty v ziadosti prepocita a data da nasledne
-enkoderom. Ked si ale tieto rychlosti vyziadame z enkoderov, tak sa robot tychto dat nechyta a my si ich musime prepocitat na metre za sekundu. Zaroven
-si tento objekt neustale pyta od robota rychlosti kolies. Ako sme uz spomenuli v \ref{sec:robotComms}, tieto spravy maju nizsiu prioritu ako nastavenie
-rychlosti kolies alebo bezpocnostne zastavenie robota. Preto sa moze stat, ze spravy posielane robotu nebudu dodrziavat presne stanovenu frekvenciu v case
-ked mu bude uzivatel posielat prikazy.
-
-\subsection{Zdielanie polohy}
-\label{sec:zdielanie_polohy}
-
-Dalsiu vec, ktoru je treba vysvetlit ku grafu Obr.~\ref{fig:flowchart} je zdielanie polohy. Odometria po kazdom dopocitani polohy robota publikuje tuto
-informaciu na temu \textit{/position} tato sprava je typu \textit{geometry\_msgs/msg/Vector3}. Obsahuje 3 hodnoty, ktore su x, y a z.
-Suradnice reprezentuju aktualnu polohu robota.
-
 \section{Oprava chýb na~robote}
 
 \subsection{Nesprávna funkcia}
@@ -507,7 +422,92 @@ a~ľavého motora.
 
 \clearpage
 
-\section{Získavanie rýchlostí robota}
+\section{Správanie programu}
+\label{sec:program}
+
+\begin{figure}[!htbp]
+	\begin{center}
+		\includegraphics[width=0.9\textwidth]{img/BlackMetal_flowchart.png}
+	\end{center}
+	\caption{Graf vykonávania programu na ovládanie robota pomocou ROS2.}
+	\label{fig:flowchart}
+\end{figure}
+
+\subsection{Úvod do čítania grafu}
+\label{sec:citanie_grafu}
+
+Na obrázku Obr.~\ref{fig:flowchart} môžeme vidieť viacero objektov rôznych farieb. Objekty zobrazené červenou farbou sú uzly spracovávané
+a vytvárané v rámci ROS2. Každý tento objekt sa vykonáva v osobitnom procese. Objekty zobrazené oranžovou farbou sú objekty, ktoré majú svoje
+vlastné vlákno. Tieto objekty boli vytvorené uzlom BlackMetal. Dátové štruktúry Queue, zobrazené bielou farbou sú vytvorene  tak aby
+zabezpečovali bezchybnú komunikáciu medzi viacerými vláknami. Objekt so zelenou farbou je vstup do programu. Je zadávaný užívateľom
+a reprezentuje žiadanú rýchlosť robota. Modry objekt je výstupom programu. Je to téma, na ktorý sa publikuje aktuálna pozícia robota.
+Robot samotný je zobrazený bielou farbou vo forme malého obláčika. Prerušované čiary na diagrame znázorňujú sieťovú komunikáciu programu
+a robota. Červené dvojité čiary udávajú, ktoré objekty patria ROS-u. Nakoniec čierne plné čiary reprezentujú tok dát medzi objektami.
+
+\subsection{Uzly}
+
+Na obrázku Obr.~\ref{fig:flowchart} môžeme vidieť postup vykonávania programu na ovládanie robota BlackMetal pomocou ROS2.
+Na začiatku programu sa vytvoria 3 uzly. Prvý uzol \textbf{Position Publisher Node} je uzol, na ktorý sa publikuje vypočítaná pozícia robota.
+Počíta sa na základe obdržaných dát z enkóderov robota. Uzol \textbf{Logger Node} slúži na zaznamenávanie stavu robota \ref{sec:logovanie}.
+Posledný uzol \textbf{BlackMetal Node} ovláda robota na základe zadaných dát užívateľom.
+
+\subsection{Vstup}
+
+Uzol \textit{BlackMetal Node} vytvorí príjemcu, ktorý počúva na téme \textit{geometry\_msgs/msg/Twist}. Tento vstup je vo forme príkazu
+zadaného v príkazovom riadku. Vyzerá nasledovne:
+
+\lstset{language=bash,
+	basicstyle=\ttfamily,
+	keywordstyle=\color{blue}\ttfamily,
+	stringstyle=\color{orange}\ttfamily,
+	commentstyle=\color{green}\ttfamily,
+	morecomment=[l][\color{magenta}]{\#},
+	numberstyle=\color{red}
+}
+
+\label{requestCommand}
+\begin{lstlisting}[language=bash]
+	ros2 topic pub /cmd_vel geometry_msgs/msg/Twist
+		"linear:
+			x: 0.0,
+			y: 0.0,
+			z: 0.0,
+		angular:
+			x: 0.0,
+			y: 0.0,
+			z: 0.0" -1
+\end{lstlisting}
+
+Tento \hyperref[requestCommand]{príkaz} publikuje jednu správu (\textit{-1}) o lineárnych a uhlových rýchlostiach na tému \textit{/cmd\_vel}
+Táto sprava je typu \textit{geometry\_msgs/mgs/Twist}. Je následne spracovaná a uložená do rady \textit{Queue}. Tato rada je prioritne založená.
+To znamená, že požiadavka s nižším kódom ma vyššiu prioritu. Požiadavky a ich kódy moceme vidieť v sekcii \ref{sec:ovladanie}.
+
+\subsection{Komunikacia s robotom}
+\label{sec:robotComms}
+
+Ako je naznačené na Obr.~\ref{fig:flowchart}, klient si vo svojom vlastnom vlákne vytiahne prvú spravu z rady a pretransformuje ju do formy JSON.
+Tento typ spravy môžeme vidieť v \ref{sec:ovladanie}. Príkaz je poslaný robotu a ten obratom dá vedieť, či danú požiadavku obdržal. Ak tato správa
+žiadala rýchlosti kolies, tak robot ďalšou správou odpovie na danú požiadavku. Typ tejto odpovede môžeme vidieť v \ref{jsonWannabeSpeed}. V tomto prípade
+sa správa spracuje a uloží sa do ďalšej rady.
+
+\subsection{Odometria}
+\label{sec:odometria}
+
+Odometria, počítanie polohy na základe rýchlosti kolies, sa vykonáva rovnako ako komunikácia s robotom v separátnom vlákne. Tu je potreba si uvedomiť
+jednu skutočnosť. To je tá, že keď posielame žiadosť na nastavenie rýchlostí kolies robota, tak robot si hodnoty v žiadosti prepočíta a dáta dá následne
+enkóderov. Keď si ale tieto rýchlosti vyžiadame z enkóderov, tak sa robot týchto dát nechytá a my si ich musíme prepočíta na metre za sekundu. Zároveň
+si tento objekt neustále pýta od robota rýchlosti kolies. Ako sme už spomenuli v \ref{sec:robotComms}, tieto spravy majú nižšiu prioritu ako nastavenie
+rýchlosti kolies alebo bezpečnostné zastavenie robota. Preto sa môže stat, že správy posielané robotu nebudú dodržiavať presne stanovenú frekvenciu v čase
+keď mu bude užívateľ posielať príkazy.
+
+\subsection{Zdielanie polohy}
+\label{sec:zdielanie_polohy}
+
+Ďalšiu vec, ktorú je treba vysvetliť ku grafu Obr.~\ref{fig:flowchart} je zdieľanie polohy. Odometria po každom prepočítaní polohy robota publikuje tuto
+informáciu na tému \textit{/position} tato sprava je typu \textit{geometry\_msgs/msg/Vector3}. Obsahuje 3 hodnoty, ktoré sú x, y a z.
+Súradnice reprezentujú aktuálnu polohu robota.
+
+\section{Filtrovanie zašumeného signálu}
 \label{sec:ziskavanieRychlosti}
 
 Ako bolo spomenuté v~predchádzajúcej kapitole, rýchlosti kolies sa dajú získať z~enkóderov. Tieto dáta sa posielajú v sprave, ktorá pripomína JSON formát.
