core: spresnenie komunikacie
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/glossary.tex
+++ b/includes/glossary.tex
@@ -1,7 +1,10 @@
 \newacronym{API}{API}{Application Programming Interface}
 \newacronym{DDS}{DDS}{Data Distribution Service}
+\newacronym{RTOS}{RTOS}{Real time operating system}
+\newacronym{IoT}{IoT}{Internet of Things}
 \newacronym{IPC}{IPC}{Inter Process Communication}
 \newacronym{LAN}{LAN}{Local Area Network}
+\newacronym{QoS}{QoS}{Quality of Service}
 \newacronym{ROS}{ROS}{Robot Operating System}
 \newacronym{JSON}{JSON}{JavaScript Object Notation}
 
