core: used technology
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/glossary.tex
+++ b/includes/glossary.tex
@@ -1,10 +1,11 @@
 \newacronym{API}{API}{Application Programming Interface}
 \newacronym{DDS}{DDS}{Data Distribution Service}
-\newacronym{RTOS}{RTOS}{Real time operating system}
-\newacronym{IoT}{IoT}{Internet of Things}
+\newacronym{GNU}{GNU}{GNU is not Unix}
+\newacronym{GCC}{GCC}{GNU Compiler Collection}
 \newacronym{IPC}{IPC}{Inter Process Communication}
+\newacronym{IoT}{IoT}{Internet of Things}
+\newacronym{JSON}{JSON}{JavaScript Object Notation}
 \newacronym{LAN}{LAN}{Local Area Network}
 \newacronym{QoS}{QoS}{Quality of Service}
 \newacronym{ROS}{ROS}{Robot Operating System}
-\newacronym{JSON}{JSON}{JavaScript Object Notation}
-
+\newacronym{RTOS}{RTOS}{Real time operating system}
