glossery: added mentioned acronims
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/glossary.tex
+++ b/includes/glossary.tex
@@ -1,10 +1,12 @@
 \newacronym{API}{API}{Application Programming Interface}
 \newacronym{DDS}{DDS}{Data Distribution Service}
-\newacronym{GNU}{GNU}{GNU is not Unix}
 \newacronym{GCC}{GCC}{GNU Compiler Collection}
+\newacronym{GNU}{GNU}{GNU is not Unix}
+\newacronym{GUI}{GUI}{Grafical User Interface}
 \newacronym{IPC}{IPC}{Inter Process Communication}
 \newacronym{IoT}{IoT}{Internet of Things}
 \newacronym{JSON}{JSON}{JavaScript Object Notation}
+\newacronym{JVM}{JVM}{Java Virtual Machine}
 \newacronym{LAN}{LAN}{Local Area Network}
 \newacronym{QoS}{QoS}{Quality of Service}
 \newacronym{ROS}{ROS}{Robot Operating System}
