formerState: povodny stav robota
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/glossary.tex
+++ b/includes/glossary.tex
@@ -8,6 +8,7 @@
 \newacronym{JSON}{JSON}{JavaScript Object Notation}
 \newacronym{JVM}{JVM}{Java Virtual Machine}
 \newacronym{LAN}{LAN}{Local Area Network}
+\newacronym{NCR}{NCR}{Národné Centrum Robotiky}
 \newacronym{QoS}{QoS}{Quality of Service}
 \newacronym{ROS}{ROS}{Robot Operating System}
 \newacronym{RTOS}{RTOS}{Real time operating system}
