--- a/includes/core.tex
+++ b/includes/core.tex
@@ -1,355 +1,7 @@
 \input{includes/technologie}
-
-\section{Pôvodný stav robota}
-
-\subsection{Robot a~jeho ovládanie}
-
-Robot, s~ktorým sme pracovali bol výsledkom tímového projektu viacerých študentov \newline z~roku 2019. Pri~vysvetľovaní a~opisovaní robota sa budeme
-odvolávať na~dokumenty, stránky a~kód, ktorý napísali. Všetky tieto údaje si sprístupnené na~mobilnom robote v~záložke
-\newline \texttt{\$(HOME)/Desktop/Blackmetal}~\cite{timovyProjekt}.
-
-Robot je v~tvare kvádra. Jeho šírka je 60cm a~je vyzdvihnutý nad zem o~1.5cm. Nachádza sa na~kolesách o~polomere 8cm. Jeho kostra, až na~oceľové pláty,
-ktoré držia robot, je spravená z~hliníku. Konkrétne z~hliníkových tyčí, ktoré sú pospájané plexisklovými plátmi. Jeho podobizeň vidíme na~nasledujúcom
-obrázku.
-
-\begin{figure}[!htbp]
-	\begin{center}
-		\includegraphics[width=0.95\textwidth]{img/robot.png}
-	\end{center}
-	\caption{Zobrazenie spodnej časti mobilného robota~\cite{timovyProjekt}}
-	\label{fig:robot}
-\end{figure}
-
-\noindent Na~obrázku ďalej vidíme olemovanie robota pásom s~LED-kami. Tie svietia nasledovným spôsobom. Keď sa robot nehýbe všetky LED-ky svietia
-na zeleno. Keď sa robot pohne do~nejakej strany, LED-ky znázornia jeho pohyb tým, že~svietia na~strane, do~ktorej sa robot hýbe. Keď nastane
-situácia, kedy počítač ovládajúci motory prestane komunikovať s~Arduinom, ktoré sa stará o~detekciu stavov robota tak~LED-ky začnú blikať
-červeno-modrými farbami.
-
-Ako bolo spomenuté LED-ky znázorňujú pohyb robota. Ten sa pohybuje za pomoci diferenciálneho podvozku s~dvoma podpornými všesmerovými kolesami.
-Motory robota sú pripojené na~meniče. Tie sú ovládané priamo príkazmi z~počítača.
-
-Hardware robota sa skladá z:
-\begin{itemize}
-	\item kontrolnej dosky Arduino Uno,
-
-	\item Počítača ADVANTECH MIO-5272~\cite{robotPc} \newline
-		Počítač obsahuje operačný systém Ubuntu 16.04.
-
-	\item Extension board MIOe-210~\cite{extensionModule}
-
-	\item Meniče MAXON EPOS 24/5 (s číslom 275512)~\cite{menic} \newline
-	 	Sú napájané jednosmerným napätím 11 - 24 V~a~5 A.
-
-	\item Enkódery MAXON Encoder MR Type L (s číslom 225787)~\cite{encoder} \newline
-		Rozlíšenie enkóderov je 1024 impulzov s~troma kanálmi.
-
-	\item Motory MAXON RE 40 (s číslom 148867)~\cite{motor} \newline
-		Motory s~výkonom 150W. Maximálna rýchlosť je 12 000 rpm a~efektivita 91\%.
-
-	\item Prevodovka MAXON Planetary Gearhead GP 42 C (s číslom 202120)~\cite{prevodovka} \newline
-		Redukcia prevodovky je 43:1. Jej účinnosť je 72\%.
-\end{itemize}
-
-\noindent Ovládanie robota je zabezpečené externými počítačmi
-\begin{itemize}
-	\item Control PC (Kontrolný počítač) -- Počítač posielajúci príkazy na~robot cez~TCP/IP protokol.
-	\item Logging PC (Logovací počítač) -- Počítač prijímajúci stav robota cez~TCP/IP protokol.
-\end{itemize}
-
-\begin{figure}[!htbp]
-	\begin{center}
-		\includegraphics[width=9cm]{img/schemaRobota.png}
-	\end{center}
-	\caption{Schéma zapojenia jednotlivých častí na~robote}
-	\label{fig:schemaRobota}
-\end{figure}
-
-\noindent Tieto počítače sú len reprezentácia servera. V~realite to môže byť jeden a~ten istý počítač.
-
-\noindent Na obrázku Obr.~\ref{fig:schemaRobota} vidíme zapojenie jednotlivých častí robota. Čo sme nespomenuli a~je na~obrázku je XBox ovládač
-je to~kvôli tomu, že~tímový projekt bol zameraný na~ovládanie robota pomocou tohto ovládača. My ho ale použivať nebudeme.
-
-\subsection{Komunikácia s~robotom}
-
-S robotom sa vieme spojiť pomocou dvoch portov. Jeden port je otvorený na~prijímanie požiadavok (requestov) a~ten druhý je na~monitorovanie
-stavu robota. Port \textit{664} je otvorený pre~tisíc užívateľov, ktorí môžu len sledovať stav robota. Druhý port je na~prijímanie requestov
-\textit{665} a~je otvorený len pre~jedného užívateľa.
-
-\subsubsection{Logovanie}
-\label{sec:logovanie}
-
-	Spomínaný port \textit{664} je otvorený jednému užívateľovi. Keď sa užívateľ pripojí začne dostávať nepretržite správy typu
-	\textit{JSON}~(\acrlong{JSON}), ktoré hlásia stav robota. Správy, ktoré dostávame sú nasledujúceho formátu
-
-	\begin{lstlisting}
-			{"state":1,"direction":1}
-	\end{lstlisting}
-
-	Hodnoty sa pri~stave (state) a~ani pri~smere (direction) nemenia. Sú to~stále jednotky. Pokým robota nezastavíme buď príkazom, stlačením
-	tlačidla vypnutia alebo zablokovaním jedného z~kolies, tak~sa tieto správy budú posielať. Môžeme potom začať polemizovať o~tom či~by nebolo
-	lepšie už tieto správy využiť na~to~čo reálne spomenutý \textit{JSON} reťazec ukazuje. A~to udávať smer a~stav robota. Momentálne tieto správy
-	slučia len na~to, aby sme vedeli, že~tento robot je aktívny a~vie primať a~spracúvať informácie.
-
-\subsubsection{Ovládanie}
-\label{sec:ovladanie}
-
-	Port \textit{665} je sprístupnený na~prijímanie a~odosielanie požiadavok a~ich odpovedí. Príkazy sa na~počítač posielajú cez~sieť z~externého
-	počítača vo~formáte \textbf{JSON}. Študenti, ktorí navrhovali systém posielania požiadavok (request) a~odpovedí (response) robili tieto správy
-	ručne. Preto~nastávajú situácie, kedy robot pošle správu, ktorá nespadá do~štandardu písania JSON textu. Z~tohto dôvodu sme nemohli použiť už
-	existujúci kód (parser), ktorý by nám zjednodušil prehľadávanie týchto správ. Podla dokumentácie sa robot mal ovládať správami typu~\cite{BMdoc}
-
-	\label{jsonSpeedRequestBad}
-	\begin{lstlisting}
-			{"UserID":1,"Command":3,"RightWheelSpeed":50,"LeftWheelSpeed":50}
-	\end{lstlisting}
-
-	\newpage
-
-	\noindent Význam jednotlivých parametrov:
-	\begin{itemize}
-		\item \textbf{UserID} -- Znázorňuje ID užívateľa, ktorý je pripojený na~robot. Predvolená hodnota je 1.
-		\item \textbf{Command} --  Číselná hodnota znázorňujúca príkaz, ktorý ma robot vykonať
-			\begin{enumerate}
-				\setcounter{enumi}{-1}
-				\item \label{c0} Prázdny príkaz slúžiaci na~overenie spojenia
-				\item \label{c1} Núdzové zastavenie
-				\item \label{c2} Normálne zastavenie
-				\item \label{c3} Príkaz nastavujúc rýchlosti kolies mobilného robota
-				\item \label{c4} Prázdny príkaz
-				\item \label{c5} Prázdny príkaz
-				\item \label{c6} Príkaz pýtajúci si aktuálnu rýchlosti pravého a~ľavého kolesa. Tento príkaz nebol sprave navrhnutý v~kóde
-					robota. Vracal nám žiadaná hodnotu namiesto aktuálnej. Museli sme ho prepísať.
-				\item \label{c7} Pripravenie motorov robota
-				\item \label{c8} Príkaz pýtajúci si aktuálnu pozíciu pravého a~ľavého kolesa.
-			\end{enumerate}
-		\item \textbf{RightWheelSpeed} -- Nastavenie rýchlosti pre~pravé koleso
-		\item \textbf{LeftWheelSpeed} -- Nastavenie rýchlosti pre~ľavé koleso
-	\end{itemize}
-
-	\noindent Z~tohto kusu kódu je jasné, že~sa majú posielať celé čísla a~na základe tohto vstupu sa bude robot hýbať. Čo sme zistili až
-	po skompilovaní a~spustení tímového projektu je, že~sa majú posielať desatinné čísla z~intervalu 0 až 1. Toto nebolo písané
-	v~dokumentácii, ktorá nám bola dodaná na~začiatku programu. Môžeme preto príklad prepísať na~reťazec, ktorý by fungoval
-
-	\label{jsonSpeedRequestGood}
-	\begin{lstlisting}
-			{"UserID":1,"Command":3,"RightWheelSpeed":0.50,"LeftWheelSpeed":0.50}
-	\end{lstlisting}
-
-\subsection{Vysvetlenie kľúčov reťazca}
-
-\noindent \textbf{UserID} \newline
-\indent Táto možnosť je v~momentálnom stave robota nevyužitá. Počet zariadení, ktoré sa môžu pripojiť na~port, cez~ktorý sa dá robot ovládať
-je 1. Je to~ale dobrá možnosť na~rozšírenie kódu. Keď sa budú môcť pripojiť viacerí užívatelia, tak~sa bude musieť vyriešiť, koho príkaz
-bude mať akú prioritu. \newline
-
-\noindent \textbf{Command:~\ref{c4}} \newline
-\indent Tento príkaz je prázdny. My sme ho ale neskôr prepísali na~príkaz, cez~ktorý sa dá nastaviť žiadaná pozícia kolies robota (natočenie).
-Táto funkcionalita nie je v~takom stave ako sme si priali. Je to spôsobené hlavne nedostačujúcov dokumentáciou enkóderov na~robote. Síce sme našli
-v~dokumentácii funkciu, ktorá by mala túto možnosť povoľovať. Čo sa ale stane pri~poslaní príkazu je to, že~kolesá sa začnú točiť rýchlosťou
-0,5 metra za sekundu.\newline
-
-\noindent \textbf{Command:~\ref{c8}} \newline
-\indent Príkaz na~zisťovanie polohy kolies nebol originálne naprogramovaný na~robote. Pridali sme ho za cieľom presného dostavia sa robota
-na~preddefinované miesto. Táto funkcionalita nefunguje správne rovnako ako v~predchádzajúcom príklade, keď si vypýtame polohu kolies od robota,
-dáta ktoré obdržme sú, že~jedno koleso je priamo nastavené na~hodnotu, ktorú sme si vyžiadali a~to druhé koleso vráti náhodnú hodnotu.
-Počas toho sa ale kolesá robota stále točia.\newline
-
-\noindent \textbf{RightWheelSpeed/LeftWheelSpeed} \newline
-\indent Nastavovanie rýchlosti pravého a~ľavého kolesa nie sú povinné parametre. Musíme ich zadávať len v~prípade posielania rýchlostí
-cez~príkaz s~číslom \ref{c3} alebo \ref{c4}.
-
-\subsection{Oprava chýb na~robote}
-
-\subsubsection{Nesprávna funkcia}
-
-Ako bolo spomenuté vyššie, pri~poslaní príkazu s~číslom~\ref{c6} nám robot vráti aktuálne rýchlosti kolies. Počas skúšania tejto funkcionality
-sme narazili na~problém. Keď sme sa robota spýtali na~jeho rýchlosti. Dostali sme reťazec, ktorý obsahoval náhodne veľké čísla. Tieto čísla sa
-menili, keď sme zadávali nejaké hodnoty pre~rýchlosti kolies aby~sa robot hýbal. Ich magnitúda ostávala rovnaká. V~nasledujúcom príklade môžeme
-vidieť ako tento reťazec vyzeral:
-
-\label{jsonWannabeSpeed}
-\begin{lstlisting}
-		{"LeftWheelSpeed"=236223201280 "RightWheelSpeed"=4294967296}
-\end{lstlisting}
-
-Tu vidíme príklad obdržanej správy. Ako si môžeme všimnúť. Pri~tomto type správ nie je dodržaná správna forma reťazca typu JSON. Namiesto `:'
-máme `=' a~medzi argumentmi sa nenachádza čiarka. Hneď ako prvú vec sme chceli tento štandard napraviť. Bohužiaľ na~tomto robote už~bolo
-spravených niekoľko projektov a~museli by sme prejsť každý z~nich a~zistiť či~používajú túto spätnú väzbu. Ak~by ju používali museli by sme
-tieto kódy upraviť.
-
-\newpage
-
-V~dokumentácii robota bohužiaľ nebolo písané v~akom formáte sa tieto rýchlosti kolies majú nachádzať. Preto jeden z~nápadov ako zistiť presne
-v~akom formáte sa posielali tieto čísla bolo vyskúšať pár možností. Boli to
-
-\begin{itemize}
-	\item \textit{long} - celé číslo s malým endianom
-	\item \textit{long} - celé číslo s veľkým endianom
-	\item \textit{float} - desatinné číslo s malým endianom
-	\item \textit{float} - desatinné číslo s veľkým endianom
-\end{itemize}
-
-Keďže robot má počítač so~63 bytovým procesorom \cite{robotPc}, tak~\textit{long} aj~\textit{float} budú mať 64 bitovú dĺžku. Po~skúsení všetkých
-štyroch možností sa~ukázalo, že~ani jedna nebola správna a~problém je niekde inde.
-
-Problém je v~tom, že~keď posielame request na~nastavenie rýchlosti kolies, tak~kód na~robote funguje tak, že~si ich premení na~celé čísla v~rozsahu
-0~až~1000. To~je hodnota, na~ktorú nastaví rýchlosti otáčania pravého a~ľavého kolesa respektíve rýchlosť otáčania ich motorov. Na~druhú stranu,
-keď si vypýtame od~robota rýchlosti kolies. On zoberie informáciu z~enkóderov a~pošle nám ju~bez spracovania. Aj napriek týmto poznatkom sa nám
-nepodarilo získať z~týchto dát žiadané rýchlosti.
-
-Po dôkladnom preštudovaní kódu sme zistili, že~hodnoty ktoré nám posiela robot nie sú ani~vyťahované z~enkóderov správnou funkciou. Preto~sme ju
-zmenili a~začali sme dostávať hodnoty, s~ktorými by sa mohlo dať pracovať.
-
-Funkcie z~knižnice zabezpečujúce komunikáciu z~enkóderov motorov pochádzajú z~firmy Maxon~\cite{EPOSdoc}. Táto dokumentácia nebola moc nápomocná.
-Opisy jednotlivých funkcií boli len~ich rozložené názvy na~osobitné slová. Aj~napriek tomu sa nám podarilo nájsť funkcie, ktoré sme potrebovali.
-Funkcie, ktoré končia koncovkou `Target', alebo toto slovo obsahujú, majú návratné hodnoty reprezentujúce žiadané hodnoty. Funkcie s~koncovkou
-`Is' vracajú aktuálne hodnoty. Z~tohto dôvodu sme museli prepísať funkciu na~robote, ktorá sa vykonávala, keď sme chceli získať aktuálne hodnoty
-rýchlosti motora poslaním príkazu \ref{c6}. Funkciu, ktorú sme zmenili môžeme vidieť v~nasledujúcej ukážke:
-
-\lstset{language=C++,
-	basicstyle=\ttfamily,
-	keywordstyle=\color{blue}\ttfamily,
-	stringstyle=\color{red}\ttfamily,
-	commentstyle=\color{green}\ttfamily,
-	morecomment=[l][\color{magenta}]{\#},
-	numberstyle=\color{orange}
-}
-
-\label{VelocityIs}
-\begin{lstlisting}[language=C++]
-BOOL VCS_GetTargetVelocity(
-	HANDLE KeyHandle,
-	WORD NodeId,
-	long* pTargetVelocity,
-	DWORD* pErrorCode);
-\end{lstlisting}
-
-\begin{lstlisting}[language=C++]
-BOOL VCS_GetVelocityIs(
-	HANDLE KeyHandle,
-	WORD NodeId,
-	long* pVelocityIs,
-	DWORD* pErrorCode);
-\end{lstlisting}
-
-\noindent Ako môžeme vidieť v~týchto predpisoch funkcií, bolo treba zmeniť názov funkcie a~ostatné parametre ostali rovnaké.
-Nebolo treba meniť implementáciu kódu.
-
-\subsubsection{Zašumený výstup}
-
-Po~prepísaní funkcie na~získavanie rýchlostí robota sme spravili pár meraní, aby sme zistili, aké presné informácie o~rýchlostiach
-motorov dostávame. Aby nám robot neodbiehal postavili sme ho na~vyvýšené miesto, tak~aby sa kolesá nedotýkali zeme. V~takomto
-postavení sa robot nepohne z~miesta a~my môžeme bez~problémov odmerať prechodové a~prenosové charakteristiky rýchlosti pravého
-a~ľavého motora.
-
-\begin{figure}[!htbp]
-	\begin{subfigure}{0.5\textwidth}
-		\includegraphics[width=\textwidth]{img/Left_wheel_2.png}
-	\end{subfigure}
-	\hfill
-	\begin{subfigure}{0.5\textwidth}
-		\includegraphics[width=\textwidth]{img/Right_wheel_2.png}
-	\end{subfigure}
-	\caption{Ustálené hodnoty rýchlosti ľavého a~pravého motora. }
-	\label{fig:lavePraveKoleso}
-\end{figure}
-
-Po~obdržaní takýchto dát sme kontaktovali jedného z~autorov tímového projektu~\cite{timovyProjekt}, Adriána Kasperkevic. On nám odpísal s~tým,
-že~aj oni mali problémy s~enkódermi. Na obrázku Obr.~\ref{fig:prechChar} vidíme zašmený signál rýchlosti poskytovanú enkódermi. Ich problémy
-boli naviazané na~staré enkódery, ktoré neskôr vymenili. Na~nových enkodéroch avšak netestovali ich spätnú väzbu.
-
-\begin{figure}[!htbp]
-	\begin{center}
-		\includegraphics[width=0.95\textwidth]{img/robotSpeedChar.png}
-	\end{center}
-	\caption{Prechodová charakteristika rýchlosti kolies~\cite{timovyProjekt}. }
-	\label{fig:prechChar}
-\end{figure}
-
-\section{Implementácia ovládača}
-\label{sec:program}
-
-\begin{figure}[!htbp]
-	\begin{center}
-		\includegraphics[width=0.9\textwidth]{img/BlackMetal_flowchart.png}
-	\end{center}
-	\caption{Graf vykonávania programu na~ovládanie robota pomocou ROS2.}
-	\label{fig:flowchart}
-\end{figure}
-
-\subsection{Úvod do~čítania grafu}
-\label{sec:citanie_grafu}
-
-Na~obrázku Obr.~\ref{fig:flowchart} môžeme vidieť viacero objektov rôznych farieb. Objekty zobrazené červenou farbou sú uzly spracovávané
-a~vytvárané v~rámci ROS2. Každý tento objekt sa vykonáva v~osobitnom procese. Objekty zobrazené oranžovou farbou sú objekty, ktoré majú svoje
-vlastné vlákno. Tieto objekty boli vytvorené uzlom BlackMetal. Dátové štruktúry Queue, zobrazené bielou farbou sú vytvorene  tak~aby
-zabezpečovali bezchybnú komunikáciu medzi viacerými vláknami. Objekt so zelenou farbou je vstup do~programu. Je zadávaný užívateľom
-a~reprezentuje žiadanú rýchlosť robota. Modry objekt je výstupom programu. Je to téma, na~ktorý sa publikuje aktuálna pozícia robota.
-Robot samotný je zobrazený bielou farbou vo~forme malého obláčika. Prerušované čiary na~diagrame znázorňujú sieťovú komunikáciu programu
-a~robota. Červené dvojité čiary udávajú, ktoré objekty patria ROS-u. Nakoniec čierne plné čiary reprezentujú tok dát medzi objektami.
-
-\subsection{Uzly}
-
-Na~obrázku Obr.~\ref{fig:flowchart} môžeme vidieť postup vykonávania programu na~ovládanie robota BlackMetal pomocou ROS2.
-Na~začiatku programu sa vytvoria 3 uzly. Prvý uzol \textbf{Position Publisher Node} je uzol, na~ktorý sa publikuje vypočítaná pozícia robota.
-Počíta sa na~základe obdržaných dát z~enkóderov robota. Uzol \textbf{Logger Node} slúži na~zaznamenávanie stavu robota \ref{sec:logovanie}.
-Posledný uzol \textbf{BlackMetal Node} ovláda robota na~základe zadaných dát užívateľom.
-
-\subsection{Vstup}
-
-Uzol \textit{BlackMetal Node} vytvorí príjemcu, ktorý počúva na~téme \textit{geometry\_msgs/msg/Twist}. Tento vstup je vo~forme príkazu
-zadaného v~príkazovom riadku. Vyzerá nasledovne:
-
-\lstset{language=bash,
-	basicstyle=\ttfamily,
-	keywordstyle=\color{blue}\ttfamily,
-	stringstyle=\color{orange}\ttfamily,
-	commentstyle=\color{green}\ttfamily,
-	morecomment=[l][\color{magenta}]{\#},
-	numberstyle=\color{red}
-}
-
-\label{requestCommand}
-\begin{lstlisting}[language=bash]
-	ros2 topic pub /cmd_vel geometry_msgs/msg/Twist
-		"linear:
-			x: 0.0,
-			y: 0.0,
-			z: 0.0,
-		angular:
-			x: 0.0,
-			y: 0.0,
-			z: 0.0" -1
-\end{lstlisting}
-
-Tento \hyperref[requestCommand]{príkaz} publikuje jednu správu (\textit{-1}) o lineárnych a~uhlových rýchlostiach na~tému \textit{/cmd\_vel}
-Táto sprava je typu \textit{geometry\_msgs/mgs/Twist}. Je následne spracovaná a~uložená do~rady \textit{Queue}. Tato rada je prioritne založená.
-To znamená, že~požiadavka s nižším kódom ma vyššiu prioritu. Požiadavky a~ich kódy moceme vidieť v~sekcii \ref{sec:ovladanie}.
-
-\subsection{Komunikacia s robotom}
-\label{sec:robotComms}
-
-Ako je naznačené na~Obr.~\ref{fig:flowchart}, klient si vo~svojom vlastnom vlákne vytiahne prvú spravu z~rady a~pretransformuje ju do~formy JSON.
-Tento typ spravy môžeme vidieť v~\ref{sec:ovladanie}. Príkaz je poslaný robotu a~ten obratom dá vedieť, či danú požiadavku obdržal. Ak tato správa
-žiadala rýchlosti kolies, tak~robot ďalšou správou odpovie na~danú požiadavku. Typ tejto odpovede môžeme vidieť v~\ref{jsonWannabeSpeed}. V~tomto prípade
-sa správa spracuje a~uloží sa do~ďalšej rady.
-
-\subsection{Odometria}
-\label{sec:odometria}
-
-Odometria, počítanie polohy na~základe rýchlosti kolies, sa vykonáva rovnako ako komunikácia s robotom v~separátnom vlákne. Tu je potreba si uvedomiť
-jednu skutočnosť. To je tá, že~keď posielame žiadosť na~nastavenie rýchlostí kolies robota, tak~robot si hodnoty v~žiadosti prepočíta a~dáta dá následne
-enkóderov. Keď si ale tieto rýchlosti vyžiadame z~enkóderov, tak~sa robot týchto dát nechytá a~my si ich musíme prepočíta na~metre za sekundu. Zároveň
-si tento objekt neustále pýta od robota rýchlosti kolies. Ako sme už spomenuli v~\ref{sec:robotComms}, tieto spravy majú nižšiu prioritu ako nastavenie
-rýchlosti kolies alebo bezpečnostné zastavenie robota. Preto sa môže stat, že~správy posielané robotu nebudú dodržiavať presne stanovenú frekvenciu v~čase
-keď mu bude užívateľ posielať príkazy.
-
-\subsection{Zdieľanie polohy}
-\label{sec:zdielanie_polohy}
-
-Ďalšiu vec, ktorú je treba vysvetliť ku grafu Obr.~\ref{fig:flowchart} je zdieľanie polohy. Odometria po~každom prepočítaní polohy robota publikuje tuto
-informáciu na~tému \textit{/position} tato sprava je typu \textit{geometry\_msgs/msg/Vector3}. Obsahuje 3 hodnoty, ktoré sú x, y a~z.
-Súradnice reprezentujú aktuálnu polohu robota.
+\input{includes/formerState}
+\input{includes/workOnRobot}
+\input{includes/controller}
 
 \section{Filtrovanie zašumeného signálu}
 \label{sec:ziskavanieRychlosti}
