--- a/includes/workOnRobot.tex
+++ b/includes/workOnRobot.tex
@@ -22,7 +22,7 @@ knižníc sme použili nasledovný príkaz.
 
 Tento príkaz najprv odstráni všetky balíčky, ktoré nie sú používané žiadnou aplikáciu v systéme. Následne vyhľadá všetky knižnice,
 ktoré taktiež nie sú používané žiadnym balíčkom a nasilu odinštaluje. Po vykonaní tejto operácie sme ešte museli odstrániť všetky referencie
-na ROS1 v~systéme. Toto sme vykonali odstránením linkov na už neaktívne repozitáre, ktoré sa nachádzali v súbore \textit{/etc/apt/sources.list}.
+na ROS1 v~systéme. Toto sme vykonali odstránením prepojení na už neaktívne repozitáre, ktoré sa nachádzali v súbore \textit{/etc/apt/sources.list}.
 
 \subsection{Chyba v dokumentácii}
 \label{subsec:documentationIssue}
@@ -37,7 +37,31 @@ v~dokumentácii, ktorá nám bola dodaná na~začiatku programu. Môžeme preto 
 			{"UserID":1,"Command":3,"RightWheelSpeed":0.50,"LeftWheelSpeed":0.50}
 	\end{lstlisting}
 
-\subsection{Nesprávna spätnú väzba}
+\subsection{Rozšírenie príkazov robota}
+\label{subsec:extendRobotCommands}
+
+Prvotne sme mali v plane získavať pozíciu robota pomocou príkazov, ktoré sa nachádzajú v knižnici enkóderov.
+Tieto príkazy mali vracať počet impulzov IRC snímačov prejdených od spustenia robota.
+Pre zaobchádzanie s touto funkcionalitou sme definovali dva príkazy:\\
+
+\noindent \textbf{Command:~\ref{c4}} \\
+\indent Tento príkaz je prázdny. My sme ho ale neskôr prepísali na~príkaz, cez~ktorý sa dá nastaviť
+žiadaná pozícia kolies robota (ich natočenie) pomocou funkcii z kniznice EPOS \cite{EPOSdoc}.
+Táto funkcionalita nie je v~takom stave ako sme si priali. Je to spôsobené hlavne nepostačujúcou dokumentáciou enkóderov na~robote. Síce sme našli
+v~dokumentácii funkciu, ktorá by mala túto možnosť povoľovať. Čo sa ale stane pri~poslaní príkazu je to, že~kolesá sa začnú točiť rýchlosťou
+0,5 metra za sekundu.\\
+
+\noindent \textbf{Command:~\ref{c8}} \\
+\indent Príkaz na~zisťovanie polohy kolies nebol originálne naprogramovaný na~robote. Pridali sme ho za cieľom presného dostavia sa robota
+na~preddefinované miesto. Táto funkcionalita nefunguje správne rovnako ako v~predchádzajúcom príklade, keď si vypýtame polohu kolies od robota,
+dáta ktoré obdržme sú, že~jedno koleso je priamo nastavené na~hodnotu, ktorú sme si vyžiadali a~to druhé koleso vráti náhodnú hodnotu.
+Počas toho sa ale kolesá robota stále točia.\\
+
+Tento postup sa ukázal ako neuskutočniteľný, lebo príkazom~\ref{c8} sme z jedného enkódery
+získavali informácie priamo nastavenej polohy a z druhého enkódera sme dodržiavali čisto náhodné dáta.
+Z tohto dôvodu sme sa rozhodli využívať spätnú väzbu, ktorá obsahuje rýchlosti robota.
+
+\subsection{Nesprávna spätná väzba}
 \label{subsec:wrongFeedback}
 
 Ako bolo spomenuté vyššie, pri~poslaní príkazu s~číslom~\ref{c6} nám robot vráti aktuálne rýchlosti kolies. Počas skúšania tejto funkcionality
@@ -50,13 +74,13 @@ môžeme vidieť ako tento reťazec vyzeral:
 		{"LeftWheelSpeed"=236223201280 "RightWheelSpeed"=4294967296}
 \end{lstlisting}
 
-Tu vidíme príklad obdržanej správy. Ako si môžeme všimnúť. Pri~tomto type správ nie je dodržaná správna forma reťazca typu \textit{JSON}.
+Ako si môžeme všimnúť. Pri~tomto type správ nie je dodržaná správna forma reťazca typu \textit{JSON}.
 Namiesto `:' máme `=' a~medzi argumentmi sa nenachádza čiarka. Hneď ako prvú vec sme chceli tento štandard napraviť. Bohužiaľ na~tomto
 robote už~bolo spravených niekoľko projektov a~museli by sme prejsť každý z~nich a~zistiť či~používajú túto spätnú väzbu. Ak~by ju používali
 museli by sme tieto kódy upraviť.
 
 V~dokumentácii robota bohužiaľ nebolo písané v~akom formáte sa tieto rýchlosti kolies majú nachádzať. Preto jeden z~nápadov ako zistiť presne
-v~akom formáte sa posielali tieto čísla bolo vyskúšať pár možností. Boli to
+v~akom formáte sa posielali tieto čísla bolo vyskúšať pár možností:
 
 \begin{itemize}
 	\item \textit{long} - celé číslo s malým endianom
@@ -65,11 +89,13 @@ v~akom formáte sa posielali tieto čísla bolo vyskúšať pár možností. Bol
 	\item \textit{float} - desatinné číslo s veľkým endianom
 \end{itemize}
 
-Keďže robot má počítač so~63 bytovým procesorom \cite{robotPc}, tak~\textit{long} aj~\textit{float} budú mať 64 bitovú dĺžku. Po~skúsení všetkých
+Keďže robot má počítač so~64 bytovým procesorom \cite{robotPc}, tak~\textit{long} aj~\textit{float} budú mať 64 bitovú dĺžku. Po~skúsení všetkých
 štyroch možností sa~ukázalo, že~ani jedna nebola správna a~problém je niekde inde.
 
-Problém je v~tom, že~keď posielame request na~nastavenie rýchlosti kolies, tak~kód na~robote funguje tak, že~si ich premení na~celé čísla v~rozsahu
-0~až~1000. To~je hodnota, na~ktorú nastaví rýchlosti otáčania pravého a~ľavého kolesa respektíve rýchlosť otáčania ich motorov. Na~druhú stranu,
+Aby sme pochopili, ako sa máme správať k prijatým dátam musíme vedieť ako funguje program na robote.
+Skopírovali sme si preto kód z robota a pustili sme sa do jeho analýzy. Pri poslaní požiadavky
+na~nastavenie rýchlostí kolies si ich robot premení na~celé čísla v~rozsahu 0~až~1000. To~je hodnota, na~ktorú nastaví
+rýchlosti otáčania pravého a~ľavého kolesa respektíve rýchlosť otáčania ich motorov. Na~druhú stranu,
 keď si vypýtame od~robota rýchlosti kolies. On zoberie informáciu z~enkóderov a~pošle nám ju~bez spracovania. Aj napriek týmto poznatkom sa nám
 nepodarilo získať z~týchto dát žiadané rýchlosti.
 
@@ -78,9 +104,9 @@ zmenili a~začali sme dostávať hodnoty, s~ktorými by sa mohlo dať pracovať.
 
 Funkcie z~knižnice zabezpečujúce komunikáciu z~enkóderov motorov pochádzajú z~firmy Maxon~\cite{EPOSdoc}. Táto dokumentácia nebola moc nápomocná.
 Opisy jednotlivých funkcií boli len~ich rozložené názvy na~osobitné slová. Aj~napriek tomu sa nám podarilo nájsť funkcie, ktoré sme potrebovali.
-Funkcie, ktoré končia koncovkou `Target', alebo toto slovo obsahujú, majú návratné hodnoty reprezentujúce žiadané hodnoty. Funkcie s~koncovkou
-`Is' vracajú aktuálne hodnoty. Z~tohto dôvodu sme museli prepísať funkciu na~robote, ktorá sa vykonávala, keď sme chceli získať aktuálne hodnoty
-rýchlosti motora poslaním príkazu \ref{c6}. Funkciu, ktorú sme zmenili môžeme vidieť v~nasledujúcej ukážke:
+Funkcie obsahujúce slovo `Target', majú návratné hodnoty reprezentujúce žiadané hodnoty. Funkcie s~príponou
+`-Is' vracajú aktuálne hodnoty. Z~tohto dôvodu sme museli prepísať funkciu na~robote, ktorá sa vykonávala.
+Pre získanie aktuálnych hodnôt rýchlosti motora poslaním príkazu \ref{c6} sme museli zmeniť nasledujúcu funkciu:
 
 \lstset{language=C++,
 	basicstyle=\ttfamily,
@@ -112,10 +138,11 @@ BOOL VCS_GetVelocityIs(
 Nebolo treba meniť implementáciu kódu.
 
 \subsection{Zašumený výstup}
+\label{subsec:outputNoice}
 
 Po~prepísaní funkcie na~získavanie rýchlostí robota sme spravili pár meraní, aby sme zistili, aké presné informácie o~rýchlostiach
 motorov dostávame. Aby nám robot neodbiehal postavili sme ho na~vyvýšené miesto, tak~aby sa kolesá nedotýkali zeme. V~takomto
-postavení sa robot nepohne z~miesta a~my môžeme bez~problémov odmerať prechodové a~prenosové charakteristiky rýchlosti pravého
+postavení sa robot nepohne z~miesta a~my môžeme bez~problémov odmerať prechodové a~prevodové charakteristiky rýchlosti pravého
 a~ľavého motora.
 
 \begin{figure}[!htbp]
@@ -130,9 +157,16 @@ a~ľavého motora.
 	\label{fig:lavePraveKoleso}
 \end{figure}
 
-Po~obdržaní takýchto dát sme kontaktovali jedného z~autorov tímového projektu~\cite{timovyProjekt}, Adriána Kasperkevic. On nám odpísal s~tým,
-že~aj oni mali problémy s~enkódermi. Na obrázku Obr.~\ref{fig:prechChar} vidíme zašmený signál rýchlosti poskytovanú enkódermi. Ich problémy
-boli naviazané na~staré enkódery, ktoré neskôr vymenili. Na~nových enkodéroch avšak netestovali ich spätnú väzbu.
+Na obrázku Obr.~\ref{fig:prechChar} vidíme zašmený signál rýchlosti, ktorú sme obdržali z enkóderov. Prvá
+otázka, ktorá nám napadla bola, či aj iné projekty na tomto robote mali rovnaký problém. Kontaktovali
+sme preto jedného z~autorov tímového projektu~\cite{timovyProjekt}, pána Adriána Kasperkeviča. On nám odpísal s~tým,
+že~aj oni mali problémy s~enkódermi. Ich problémy boli naviazané na~staré enkódery, ktoré neskôr
+vymenili. Na~nových enkodéroch avšak netestovali ich spätnú väzbu. Na túto tému sme sa rozprávali
+aj s pánom Ing. Martin Dekan PhD. Pán doktor Dekan nám spomínal, že on mal so študentmi raz podobný
+problém. Tento problém bol spôsobený vzájomným rušením neizolovaných častí káblov. Keď sa pozrieme
+na obrázok Obr.~\ref{fig:robot}, tak môžeme vidieť nesprávny manažment káblov. Toto neusporiadané vedenie káblov môže
+spôsobovať rušenie signálu spätnej väzby. Túto teóriu potvrdzuje aj fakt, že spätná väzba rýchlosti
+keď robot stoji neobsahuje rušenie a je zaručene 0.
 
 \begin{figure}[!htbp]
 	\begin{center}
@@ -142,3 +176,4 @@ boli naviazané na~staré enkódery, ktoré neskôr vymenili. Na~nových enkodé
 	\label{fig:prechChar}
 \end{figure}
 
+\clearpage
